err/seqcluster.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/seqcluster'...
Listing './lib/python3.5/site-packages/seqcluster/align'...
Listing './lib/python3.5/site-packages/seqcluster/annotate'...
Listing './lib/python3.5/site-packages/seqcluster/db'...
Listing './lib/python3.5/site-packages/seqcluster/detect'...
Compiling './lib/python3.5/site-packages/seqcluster/detect/description.py'...
***   File "./lib/python3.5/site-packages/seqcluster/detect/description.py", line 18
    data_loci = map(lambda (x): [x, loci[x].chr, int(loci[x].start), int(loci[x].end), loci[x].strand, len(c.loci2seq[x])], c.loci2seq.keys())
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seqcluster/explore_cluster.py'...
***   File "./lib/python3.5/site-packages/seqcluster/explore_cluster.py", line 23
    print "%s" % (loci)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seqcluster/function'...
Listing './lib/python3.5/site-packages/seqcluster/html'...
Compiling './lib/python3.5/site-packages/seqcluster/html/HTML.py'...
***   File "./lib/python3.5/site-packages/seqcluster/html/HTML.py", line 439
    print str(t)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seqcluster/libs'...
Compiling './lib/python3.5/site-packages/seqcluster/libs/annotation.py'...
***   File "./lib/python3.5/site-packages/seqcluster/libs/annotation.py", line 23
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seqcluster/libs/parse.py'...
***   File "./lib/python3.5/site-packages/seqcluster/libs/parse.py", line 6
    print in_args
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seqcluster/libs/thinkbayes.py'...
***   File "./lib/python3.5/site-packages/seqcluster/libs/thinkbayes.py", line 289
    print val, prob
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seqcluster/make_clusters.py'...
***   File "./lib/python3.5/site-packages/seqcluster/make_clusters.py", line 173
    data_ann_temp[dbi] = {dbi: map(lambda (x): loci[lid].db_ann[dbi].ann[x].name, loci[lid].db_ann[dbi].ann.keys())}
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seqcluster/methods'...
Listing './lib/python3.5/site-packages/seqcluster/seqbuster'...
Compiling './lib/python3.5/site-packages/seqcluster/seqbuster/__init__.py'...
***   File "./lib/python3.5/site-packages/seqcluster/seqbuster/__init__.py", line 485
    print "No files analyzed!"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seqcluster/stats.py'...
***   File "./lib/python3.5/site-packages/seqcluster/stats.py", line 42
    seqs_name = map(lambda (x): x.keys(), item['seqs'])
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seqcluster/templates'...
Listing './lib/python3.5/site-packages/seqcluster-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/test_automated_analysis.py'...
***   File "./lib/python3.5/site-packages/test/test_automated_analysis.py", line 59
    print dirname
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
